# FastAPI-request_body

Event_Booking_API/: .coverage  models.py  pyproject.toml  routes.py  services.py  test_routes.py
Flight_Booking_API/: .coverage  main.py  pyproject.toml  test_routes.py
Payment_Processing_API/: .coverage  models.py  pyproject.toml  routes.py  services.py  test_routes.py
Product_Search_API/: .coverage  main.py  models.py  pyproject.toml  routes.py  services.py  test_toutes.py
User_Registration_API/: .coverage  config.py  main.py  models.py  pyproject.toml  routes.py  services.py  test_routes.py
Vehicle_Inventory_API/: .coverage  main.py  models.py  pyproject.toml  routes.py  services.py  test_routes.py
