[tool.poetry]
name = "flight-booking-api"
version = "0.1.0"
description = "Flight booking API using FastAPI"
authors = ["Cozyamy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pytest = "^8.1.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
pydantic-extra-types = "^2.6.0"
phonenumbers = "^8.13.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
